fix some swagger and initial auth
