# service/docs/swagger.json
@@ -5,8 +5,7 @@
     },
     "paths": {
         "/api/v1/accounts/login/access-token": {
-            "get": {
-                "description": "login get access-token",
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -15,6 +14,18 @@
                 ],
                 "tags": [
                     "accounts"
+                ],
+                "summary": "Login get token by user/pass",
+                "parameters": [
+                    {
+                        "description": "Login by User/Pass",
+                        "name": "account",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginAccessTokenParam"
+                        }
+                    }
                 ],
                 "responses": {
                     "200": {
@@ -95,6 +106,18 @@
                 "fresh_token": {
                     "type": "string",
                     "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiYWRtaW4iOnRydWV9.TJVA95OrM7E2cBab30RMHrHDcEfxjoYZgeFONFh7HgQ"
+                }
+            }
+        },
+        "models.LoginAccessTokenParam": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "@1q2w3e4r"
+                },
+                "user_name": {
+                    "type": "string"
                 }
             }
         }
